# paozhao_koutu

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ReleaseNotes.txt  configuration.json  logging.h  lvsuPz_config.json  main.cpp  modbus.h  tensorrt_classifier copy.cpp  tensorrt_classifier copy.h  tensorrt_classifier.cpp  tensorrt_classifier.h  version.h.in  xj_app_config.cpp  xj_app_config.h  xj_app_detector.cpp  xj_app_detector.h  xj_app_io_manager.cpp  xj_app_io_manager.h  xj_app_server.cpp  xj_app_server.h  xj_app_tracker.cpp  xj_app_tracker.h  xj_app_web_server.cpp  xj_app_web_server.h  xj_app_workflow.cpp  xj_app_workflow.h
opt/config_paozhao/: configuration_crop.json  lvsuPz_config.json
opt/include_paozhao/: apb_web_server.hpp  basler_camera.h  basler_camera_config.h  bdaqctrl.h  board.h  bound_box.h  camera.h  camera_manager.h  classifier_result.h  config.h  customized_json_config.h  database.h  db_utils.h  detector.h  euresys_camera.h  euresys_camera_config.h  euresys_dalsa_camera.h  euresys_dalsa_camera_config.h  euresys_itek_camera.h  euresys_itek_camera_config.h  factory.hpp  file_utils.h  haikang_camera.h  haikang_camera_config.h  io_card_manager.h  io_keyence_plc_manager.h  io_manager.h  io_manager_utils.h  io_modbus_manager.h  io_mxe5500_manager.h  io_omron_plc_manager.h  io_seeking_manager.h  io_tcpip_modbus_manager.h  logger.h  lucid_camera.h  lucid_camera_config.h  mock_camera.h  mock_camera_config.h  opencv_utils.h  product_line.h  (+11 more)
test/: 01.cpp  CMakeLists.txt  test.cpp
